# cco.storage

./: CHANGES.txt  README.md  pyproject.toml  requirements.txt  setup.py
src/cco/storage/: README.rst  __init__.py  common.py  proxy.py  test_all.py  tests.py  tracking.py
src/cco/storage/loops/: __init__.py  common.py
src/cco/storage/proxy/: __init__.py  core.py
src/cco/storage/tracking/: __init__.py  record.py
